
2008-04-12 Paul Ramsey <pramsey@cleverelephant.ca>
          
        * lwgeom/Makefile, lwgeom/lwgeom_chip.c, 
          lwgeom/lwpostgis.sql.in doc/postgis.xml
          ST_AsGeoJson() patch from Olivier Courtin.

---------  PostGIS-1.3.3 release [2008-04-12] --------------------------

2008-04-12 Paul Ramsey <pramsey@cleverelephant.ca>

        * load/shp2pgsql.c
          Added patch from Regina Obe to support DBF-only
          loading of attributes without shapes.

2008-04-07 Paul Ramsey <pramsey@cleverelephant.ca>

        * loader/shp2pgsql.c, pgsql2shp.c, getopt.c, getopt.h
          Renamed all instances of getopt to pgis_gettop to avoid 
          collision with system getopt.  To do: return to using
          system getopt and drop our version?  Understand the 
          actions of the platform #defines in getopt.h?

2008-03-28 Paul Ramsey <pramsey@cleverelephant.ca>

        * lwgeom/lwgeom_kml.c, lwgeom/lwpostgis.sql.in
          Added patch from Eduin Carillo to enhance KML
          support. 
          http://code.google.com/p/postgis/issues/detail?id=17

2008-03-28 Paul Ramsey <pramsey@cleverelephant.ca>

        * doc/postgis.xml, lwgeom/lwgeom_svn.c,
          Added patch from Marco Hugentobler to enhance SVG 
          support. 2008-February/002883.html

2008-03-28 Paul Ramsey <pramsey@cleverelephant.ca>

        * Makefile.config.in, configure.in, lwgeom/Makefile, 
          lwgeom/lwpostgis.sql.in, lwgeom/lwgeom_geos_c.c
          Changed GEOS version checking to use geos-config, and
          set a GEOS_VERNUM macro that compresses the version string
          into an integer: 2.2.1 = 22, 3.1.1 = 31, etc.
        * Placed GEOS 3.0 and 3.1 dependent functions into 
          appropriate macro blocks.

2008-02-12 Paul Ramsey <pramsey@cleverelephant.ca>

	* lwgeom/lwgeom_geos_c.c, lwgeom/lwpostgis.sql.in: Add in hook to 
          GEOSTopologyPreserveSimplify

---------  PostGIS-1.3.2 release [2007-12-01] --------------------------
